--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>proyecto</title>
+    <title>ASUS</title>
+    <link rel="icon" type="image/x-icon" href="logoRog.png">
+
 </head>
 <style>
-    .fondo{
-       background-image:url(R.jpg);
-       padding: 50%;
+    .fondo {
+        background-image: url(fondo.png);
+        width: 1500px;
+        height: 800px;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-attachment: fixed;
     }
-
-
-
 </style>
 
 
@@ -22,8 +26,15 @@
 
 
 
-<body class="fondo">
-    
-    <a href="formulario.html" >fommulario</a>
+<body class="fondo" class="formulario">
+    <img src="R.png" alt="" width="400px" height="300px">
+    <a href="formulario.html" class="color">FORMULARIO</a>
+    <a href="celulares.html">CELULARES</a>
+    <a href="computadores.html">COMPUTADORES</a>
+
+
+
+
 </body>
+
 </html>
